actualización de funcionalidades, pruebas unitarias y de integración

--- a/microservicio/infraestructura/src/test/resources/application.yaml
+++ b/microservicio/infraestructura/src/test/resources/application.yaml
@@ -7,3 +7,9 @@ spring:
       hikari:
          poolName: pool
 
+   flyway:
+      enabled: true
+      schemas: public
+      locations: classpath:db/migration/DML
+      baselineOnMigrate: true
+      check-location: true
