--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Información del proyecto
-sonar.projectKey=co.com.ceiba.[nombre.cliente]:[nombre.proyecto]
+sonar.projectKey=co.com.ceiba:citas.fernando.rojas
 sonar.projectName=Ceiba-adn.citas
 
 #Datos de los fuentes y binarios
