--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Información del proyecto
-sonar.projectKey=co.com.ceiba:citas.fernando.rojas
+sonar.projectKey=co.com.ceiba.fernandorojas:citas
 sonar.projectName=Ceiba-adn.citas
 
 #Datos de los fuentes y binarios
