se agregan pruebas unitarias

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.modules=microservicio/dominio, microservicio/infraestructura
 
 # Información del proyecto
 sonar.projectKey=co.com.ceiba.fernandorojas:citas
-sonar.projectName=Ceiba-adn.citas
+sonar.projectName=ADNCeiba-FernandoRojas.citas
 
 #Datos de los fuentes y binarios
 sonar.sources=./src/main/java
